--- a/src/app/component/edit-popup/edit-popup.component.html
+++ b/src/app/component/edit-popup/edit-popup.component.html
@@ -27,8 +27,8 @@
     </div>
     <p-footer>
         <div class="row full-center">
-            <button pButton type="button" label="Save" (click)="onConfirm()">Save</button>
-            <button pButton type="button" label="Cancel" (click)="onCancel()">Cancel</button>
+            <button pButton type="button" label="Save" (click)="onConfirm()"></button>
+            <button pButton type="button" label="Cancel" (click)="onCancel()"></button>
         </div>
     </p-footer>
 </p-dialog>
